# cdn-proxy

./: .gitignore  .goreleaser.yml  .pylint.ini  Dockerfile.dev  LICENSE  Makefile  README.md  action.yml  burp.py  cdn_bypass.py  cdn_proxy_burp_ext.py  cli.py  go.mod  go.sum  main.go  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: actions-proxy.yml  go-release.yml  go-tests.yml  main.yml  python-release.yml  python-tests.yml  tests.yml
burp_extension/: cdn_proxy_burp_ext.py  requirements-dev.txt
cdn_bypass/: __main__.py  cli.py  lib.py  main.py
cdn_bypass/cloudflare/: __init__.py  cli.py
cdn_bypass/cloudfront/: __init__.py  cli.py  main.py
cdn_bypass/lambdas/request/: main.py
cdn_proxy/: __main__.py  cli.py  ips.yaml  lib.py
cdn_proxy/cloudflare/: __init__.py  cli.py  main.py
cdn_proxy/cloudfront/: __init__.py  cli.py  main.py  scanner.py
cdn_proxy/cloudfront/req_lambda/: config-overrides.js  main.py  package.json
cdn_proxy/cloudfront/req_lambda/public/: index.html
cdn_proxy/cloudfront/req_lambda/src/: App.test.tsx  App.tsx  (+5 more)
cdn_proxy/lambdas/: Dockerfile  Makefile  package.json
cdn_proxy/lambdas/public/: index.html
cdn_proxy/lambdas/request/: help.html  main.py
cdn_proxy/lambdas/src/: App.css  App.test.tsx  App.tsx  CloudFrontScanner.test.tsx  CloudFrontScanner.ts  Help.tsx  Scanner.jsx  Scanner.tsx
github/: Dockerfile  entrypoint.sh
lib/: lib.go  report.go  report_test.go
pkg/cloudflare/: main.go
pkg/cloudfront/: main.go
tests/: test_functional.py  test_lambda_request.py  test_main.py  test_unit.py
