[tool.poetry]
name = "cdn-proxy"
version = "0.1.0"
description = "Take advantage of IP whitelisting of shared CDNs."
authors = ["Ryan Gerstenkorn"]
license = "BSD-3"

[tool.poetry.scripts]
cdn-proxy = "cdn_proxy.__main__:main"

[tool.poetry.dependencies]
python = "^3.6.2"
botocore = "^1.21.25"
boto3 = "^1.18.25"
typer = "^0.3.2"
cloudflare = "^2.8.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
moto = {extras = ["lambda", "iam"], version = "^2.2.3"}
docker = "^5.0.0"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
